--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -57,33 +57,33 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>com.google.cloud.tools</groupId>
-                <artifactId>jib-maven-plugin</artifactId>
-                <version>0.9.7</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>build</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <from>
-                        <image>openjdk:10-jre</image>
-                    </from>
-                    <to>
-                        <image>registry.hub.docker.com/hronom/eureka-service:${project.version}</image>
-                    </to>
-                    <container>
-                        <mainClass>com.github.hronom.eurekaservice.EurekaServiceApplication</mainClass>
-                        <ports>
-                            <port>8081</port>
-                        </ports>
-                    </container>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>com.google.cloud.tools</groupId>-->
+                <!--<artifactId>jib-maven-plugin</artifactId>-->
+                <!--<version>0.9.7</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>build</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+                <!--<configuration>-->
+                    <!--<from>-->
+                        <!--<image>openjdk:10-jre</image>-->
+                    <!--</from>-->
+                    <!--<to>-->
+                        <!--<image>registry.hub.docker.com/hronom/eureka-service:${project.version}</image>-->
+                    <!--</to>-->
+                    <!--<container>-->
+                        <!--<mainClass>com.github.hronom.eurekaservice.EurekaServiceApplication</mainClass>-->
+                        <!--<ports>-->
+                            <!--<port>8081</port>-->
+                        <!--</ports>-->
+                    <!--</container>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 </project>
